Fix appointments layout on mobile landscape

--- a/css/appointments.css
+++ b/css/appointments.css
@@ -39,11 +39,10 @@
   }
   #appointments iframe {
     position: fixed;
-    top: 3.75em;
+    top: 4em;
     left: 0;
     right: 0;
-    bottom: 7em;
-    height: calc(100vh - 10.75em) !important;
+    height: calc(80vh) !important;
     min-height: 0 !important;
   }
 }
@@ -51,7 +50,6 @@
 /* Desktop */
 @media only screen and (min-width: 1025px) {
   #appointments iframe {
-    /* bottom: 2em; */
     top: 5.5em;
     height: calc(100vh - 5.75em) !important;
   }
